--- a/documents/Herramientas para el procesamiento del lenguaje natural/TC3007B_NLP_HW2_AD2024_text_classifier_updated_1 (1).ipynb
+++ b/documents/Herramientas para el procesamiento del lenguaje natural/TC3007B_NLP_HW2_AD2024_text_classifier_updated_1 (1).ipynb
@@ -57,6 +57,26 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "Team Members:\n",
+        "\n",
+        "A01368818 Joel Sánchez Olvera\n",
+        "\n",
+        "A01661090 Juan Pablo Cabrera Quiroga\n",
+        "\n",
+        "A01704076 Adrián Galván Díaz\n",
+        "\n",
+        "A01708634 Carlos Eduardo Velasco Elenes\n",
+        "\n",
+        "A01709522 Arturo Cristián Díaz López"
+      ],
+      "metadata": {
+        "id": "1xmNGaURGV-J"
+      },
+      "id": "1xmNGaURGV-J"
+    },
+    {
+      "cell_type": "markdown",
       "id": "4de318da",
       "metadata": {
         "id": "4de318da"
